new boilerplate-color

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en-us">
 
-<html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>Bryce Spraggins Portfolio</title>
-  
-
-  <link rel="stylesheet" href="./styles.css">
-
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles.css">
+    <title>Bryce Spraggins</title>
 </head>
+
+<body>
+    <div class="header">
+        <h1>Bryce<span class="seo">Spraggins</span></h1>
+        <div>
+            <ul>
+                <li>
+                    <button class="header-button" href="#About-me">About Me</button>
+                </li>
+                <li>
+                    <button class="header-button" href="#Projects">Projects</button>
+                </li>
+                <li>
+                    <button class="header-button" href="#Contact">Contact</button>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="main_background"></div>
+    <div class="content">
+        <div class="main-section">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="seo"/>
+            <h2>About Me</h2>
+            <p>
+                Hello, my name is Bryce Spraggins and I am from Grand Rapids, MI. I am 27 years old and I am a web developer. 
+                I have earned an Advertising degree from Grand Valley State University along with a coding bootcamp degree from Michigan State University. 
+                I am eager to learn, show off my skills, and enjoy the challenges ahead in the web developing world.
+                Please fill free to check out my projects along with how to be in contact with me. Thank you 
+                 
+            </p>
+        </div>
+        <div class="main-section">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="reputation"/>
+            <h2>Projects</h2>
+            <p>
+                Here you will see my various project using: html, css, java script etc. 
+            </p>
+        </div>
+        <div class="main-section">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="marketing"/>
+            <h2>Contact</h2>
+            <p>
+                Email
+                Twitter
+                Linkedin
+
+            </p>
+        </div>
+    
+</body>
+
+</html>
