--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,16 @@
                 <li>
                     <button class="header-button" href="#Contact">Contact</button>
                 </li>
+                <li>
+                    <button class="header-button" href="#Resume">Resume</button>
+                </li>
             </ul>
         </div>
     </div>
     <div class="main_background"></div>
     <div class="content">
         <div class="main-section">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="seo"/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-auto" alt="⭐"/>
             <h2>About Me</h2>
             <p>
                 Hello, my name is Bryce Spraggins and I am from Grand Rapids, MI. I am 27 years old and I am a web developer. 
@@ -38,21 +41,29 @@
             </p>
         </div>
         <div class="main-section">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="reputation"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-auto" alt="📓"/>
             <h2>Projects</h2>
             <p>
                 Here you will see my various project using: html, css, java script etc. 
             </p>
         </div>
         <div class="main-section">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="marketing"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-auto" alt="📬"/>
             <h2>Contact</h2>
             <p>
-                Email
-                Twitter
-                Linkedin
+                <a href = "mailto: spragbry93@gmail.com"> Send Email</a><br>
+                Twitter<br>
+                Linkedin<br>
+
 
             </p>
+        </div>
+        <div> 
+            <footer> 
+                <p> This site was brought to you by Bryce Spraggins</p>
+            </footer>
+        </div>
+
         </div>
     
 </body>
