--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles.css">
     <title>Bryce Spraggins</title>
+    <script src="./portfolio.js"></script>
 </head>
 
 <body>
@@ -13,24 +14,23 @@
         <div>
             <ul>
                 <li>
-                    <button class="header-button" href="#About-me">About Me</button>
+                    <button class="header-button" href="#About-me" id="aboutMe">About Me</button>
                 </li>
                 <li>
-                    <button class="header-button" href="#Projects">Projects</button>
+                    <button class="header-button" href="#Projects" id="projects">Projects</button>
                 </li>
                 <li>
-                    <button class="header-button" href="#Contact">Contact</button>
+                    <button class="header-button" href="#Contact" id="contact">Contact</button>
                 </li>
                 <li>
-                    <button class="header-button" href="#Resume">Resume</button>
+                    <button class="header-button" href="#Resume" id="resume">Resume</button>
                 </li>
             </ul>
         </div>
     </div>
-    <div class="main_background"></div>
     <div class="content">
-        <div class="main-section">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-auto" alt="⭐"/>
+        <div class="main-section" id="aboutMeDiv">
+            <img src="./images/City.JPG" id="cityImage"></img>
             <h2>About Me</h2>
             <p>
                 Hello, my name is Bryce Spraggins and I am from Grand Rapids, MI. I am 27 years old and I am a web developer. 
@@ -40,20 +40,21 @@
                  
             </p>
         </div>
-        <div class="main-section">
+        <div class="main-section" id="projectDiv">
             <img src="./assets/images/online-reputation-management.jpg" class="float-auto" alt="📓"/>
             <h2>Projects</h2>
             <p>
                 Here you will see my various project using: html, css, java script etc. 
             </p>
         </div>
-        <div class="main-section">
+        <div class="main-section" id="contactResumeDiv">
             <img src="./assets/images/social-media-marketing.jpg" class="float-auto" alt="📬"/>
             <h2>Contact</h2>
             <p>
                 <a href = "mailto: spragbry93@gmail.com"> Send Email</a><br>
                 Twitter<br>
                 Linkedin<br>
+                Resume<br>
 
 
             </p>
