--- a/portfolio.html
+++ b/portfolio.html
@@ -41,23 +41,49 @@
             </p>
         </div>
         <div class="main-section" id="projectDiv">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-auto" alt="📓"/>
             <h2>Projects</h2>
             <p>
                 Here you will see my various project using: html, css, java script etc. 
             </p>
+            <div id="coffeeImageDiv">
+                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
+                    <img src="./images/Coffee.JPG" id="coffeeImage"/>
+                </a>
+                <h3 id="coffeeHeader">Coffee</h3>
+            </div>
         </div>
-        <div class="main-section" id="contactResumeDiv">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-auto" alt="📬"/>
+        <div class="imageSection">
+            <div class="imageDiv">
+                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
+                <img src="./images/Basketball.JPG" class="thumbNailImage"/></a>
+                <h3 class="imageText">Basketball</h3>
+            </div>
+            <div class="imageDiv">
+                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
+                <img src="./images/Fall.JPG" class="thumbNailImage"/></a>
+                <h3 class="imageText">Fall</h3>
+            </div>  <div class="imageDiv">
+                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
+                <img src="./images/Boxing.JPG" class="thumbNailImage"/></a>
+                <h3 class="imageText">Boxing</h3>
+            </div>  <div class="imageDiv">
+                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
+                <img src="./images/Car.JPG" class="thumbNailImage"/></a>
+                <h3 class="imageText">Car</h3>
+            </div>
+                
+        </div>
+        <div class="contact" id="contactResumeDiv">
             <h2>Contact</h2>
-            <p>
-                <a href = "mailto: spragbry93@gmail.com"> Send Email</a><br>
-                Twitter<br>
-                Linkedin<br>
-                Resume<br>
-
-
+            <p class="contactText"> 
+                Phone: (616) 285-9877
             </p>
+            <p class="contactText"> 
+               Email: spragbry93@gmail.com 
+            </p>
+            <p class="contactText"> 
+                LinkedIn
+             </p>
         </div>
         <div> 
             <footer> 
