--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="content">
         <div class="main-section" id="aboutMeDiv">
-            <img src="./images/city.jpg" id="cityImage"></img>
+            <img src="images/city.jpg" id="cityImage"></img>
             <h2>About Me</h2>
             <p>
                 Hello, my name is Bryce Spraggins and I am from Grand Rapids, MI. I am 27 years old and I am a web developer. 
@@ -47,7 +47,7 @@
             </p>
             <div id="coffeeImageDiv">
                 <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                    <img src="./images/coffee.jpg" id="coffeeImage"/>
+                    <img src="images/coffee.jpg" id="coffeeImage"/>
                 </a>
                 <h3 id="coffeeHeader">Coffee</h3>
             </div>
@@ -55,20 +55,20 @@
         <div class="imageSection">
             <div class="imageDiv">
                 <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                <img src="./images/basketball.jpg" class="thumbNailImage"/></a>
+                <img src="images/basketball.jpg" class="thumbNailImage"/></a>
                 <h3 class="imageText">Basketball</h3>
             </div>
             <div class="imageDiv">
                 <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                <img src="./images/fall.jpg" class="thumbNailImage"/></a>
+                <img src="images/fall.jpg" class="thumbNailImage"/></a>
                 <h3 class="imageText">Fall</h3>
             </div>  <div class="imageDiv">
                 <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                <img src="./images/boxing.jpg" class="thumbNailImage"/></a>
+                <img src="images/boxing.jpg" class="thumbNailImage"/></a>
                 <h3 class="imageText">Boxing</h3>
             </div>  <div class="imageDiv">
                 <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                <img src="./images/car.jpg" class="thumbNailImage"/></a>
+                <img src="images/car.jpg" class="thumbNailImage"/></a>
                 <h3 class="imageText">Car</h3>
             </div>
                 
