--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="content">
         <div class="main-section" id="aboutMeDiv">
-            <img src="images/city.jpg" id="cityImage"></img>
+            <img src="Images/City.JPG" id="cityImage"></img>
             <h2>About Me</h2>
             <p>
                 Hello, my name is Bryce Spraggins and I am from Grand Rapids, MI. I am 27 years old and I am a web developer. 
@@ -47,7 +47,7 @@
             </p>
             <div id="coffeeImageDiv">
                 <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                    <img src="images/Coffee.JPG" id="coffeeImage"/>
+                    <img src="Images/Coffee.JPG" id="coffeeImage"/>
                 </a>
                 <h3 id="coffeeHeader">Coffee</h3>
             </div>
