--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styles.css">
     <title>Bryce Spraggins</title>
     <script src="./portfolio.js"></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </head>
 
 <body>
@@ -46,44 +47,41 @@
                 Here you will see my various project using: html, css, java script etc. 
             </p>
             <div id="coffeeImageDiv">
-                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                    <img src="Images/Coffee.JPG" id="coffeeImage"/>
+                <a target="blank" class="imageLink" href="https://hhhhhaaaa.github.io/WillWeather/">
+                    <img src="Images/weather-project.png" id="coffeeImage"/>
                 </a>
-                <h3 id="coffeeHeader">Coffee</h3>
+                <h3 id="coffeeHeader">Weather Application</h3>
             </div>
         </div>
         <div class="imageSection">
             <div class="imageDiv">
-                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                <img src="Images/Basketball.JPG" class="thumbNailImage"/></a>
-                <h3 class="imageText">Basketball</h3>
+                <a target="blank" class="imageLink" href="https://spragbry.github.io/03-hw-password/">
+                <img src="Images/password-generator.png" class="thumbNailImage"/></a>
+                <h3 class="imageText"></h3>
             </div>
             <div class="imageDiv">
-                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                <img src="Images/Fall.JPG" class="thumbNailImage"/></a>
-                <h3 class="imageText">Fall</h3>
+                <a target="blank" class="imageLink" href="https://spragbry.github.io/05-hw-day_planner/">
+                <img src="Images/day-planner.png" class="thumbNailImage"/></a>
+                <h3 class="imageText"></h3>
             </div>  <div class="imageDiv">
-                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                <img src="Images/Boxing.JPG" class="thumbNailImage"/></a>
-                <h3 class="imageText">Boxing</h3>
-            </div>  <div class="imageDiv">
-                <a target="blank" class="imageLink" href="https://photos.app.goo.gl/crjsZgmYbJoBY7J89">
-                <img src="Images/Car.JPG" class="thumbNailImage"/></a>
-                <h3 class="imageText">Car</h3>
+                <a target="blank" class="imageLink" href="https://spragbry.github.io/04-code-quiz/">
+                <img src="Images/code-quiz.png" class="thumbNailImage"/></a>
+                <h3 class="imageText"></h3>
+            </div>  
             </div>
-                
-        </div>
         <div class="contact" id="contactResumeDiv">
-            <h2>Contact</h2>
-            <p class="contactText"> 
-                Phone: (616) 285-9877
-            </p>
-            <p class="contactText"> 
-               Email: spragbry93@gmail.com 
-            </p>
-            <p class="contactText"> 
-                LinkedIn
-             </p>
+            <h3>Contact</h3>
+            <div>
+                <ion-icon name="call-outline"></ion-icon>
+                <h4>616-581-3906</h4>
+            </div>    
+            <a href="mailto: spragbry93@gmail.com">
+                <ion-icon name="mail-outline"></ion-icon>
+                <h4>spragbry93@gmail.com</h4>
+            </a>    
+            <a href="https://www.linkedin.com/in/bryce-spraggins-71b6a4126/">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>    
         </div>
         <div> 
             <footer> 
