--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="main-section" id="projectDiv">
             <h2>Projects</h2>
             <p>
-                Here you will see my various project using: html, css, java script etc. 
+                Here you will see my various project using: html, css, java script, node.js, bootstrap etc. 
             </p>
             <div id="coffeeImageDiv">
                 <a target="blank" class="imageLink" href="https://hhhhhaaaa.github.io/WillWeather/">
@@ -63,24 +63,42 @@
                 <a target="blank" class="imageLink" href="https://spragbry.github.io/05-hw-day_planner/">
                 <img src="Images/day-planner.png" class="thumbNailImage"/></a>
                 <h3 class="imageText"></h3>
-            </div>  <div class="imageDiv">
+            </div>  
+            <div class="imageDiv">
                 <a target="blank" class="imageLink" href="https://spragbry.github.io/04-code-quiz/">
                 <img src="Images/code-quiz.png" class="thumbNailImage"/></a>
                 <h3 class="imageText"></h3>
-            </div>  
-            </div>
+            </div> 
+        </div>
+        <div class="projectsCont">
+            <h2>Links to my other projects & Resume:</h2>
+            <li>
+                <a href="https://drive.google.com/file/d/1LQiAqwe_W1Gzwu_JHEbs8T5HFKxe5BGt/view?usp=sharing">Resume</a>
+            </li>
+            <li>
+                <a href="https://futbols-fantasy.herokuapp.com/">Futbols-Fantasy</a>
+            </li>
+            <li>
+                <a href="https://spragbry.github.io/hw-10-team-profile/">Team Profile using node</a>
+            </li>
+            <li>
+                <a href="https://spragbry.github.io/hw-06-weather_dashboard/">Weather Dashboard</a>
+            </li>
+        </div>
         <div class="contact" id="contactResumeDiv">
-            <h3>Contact</h3>
+            <h3>Contact Info:</h3>
             <div>
                 <ion-icon name="call-outline"></ion-icon>
                 <h4>616-581-3906</h4>
             </div>    
             <a href="mailto: spragbry93@gmail.com">
                 <ion-icon name="mail-outline"></ion-icon>
-                <h4>spragbry93@gmail.com</h4>
             </a>    
             <a href="https://www.linkedin.com/in/bryce-spraggins-71b6a4126/">
                 <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+            <a href="https://github.com/Spragbry">
+                <ion-icon name="logo-github"></ion-icon>
             </a>    
         </div>
         <div> 
