css styling and react like button update

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="header">
         <h1>Bryce<span class="seo">Spraggins</span></h1>
+        <div id="like_button_container"></div>
         <div>
             <ul>
                 <li>
@@ -30,7 +31,7 @@
         </div>
     </div>
     
-    <div id="like_button_container"></div>
+    <!--<div id="like_button_container"></div>-->
     
     <div class="content">
         <div class="main-section" id="aboutMeDiv">
