--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="Images/City.JPG" id="cityImage"></img>
             <h2>About Me</h2>
             <p>
-                Hello, my name is Bryce Spraggins and I am from Grand Rapids, MI. I am 27 years old and I am a web developer. 
+                Hello, my name is Bryce Spraggins and I am a full stack Web Developer. I am originally from Grand Rapids, MI. 
                 I have earned an Advertising degree from Grand Valley State University along with a coding bootcamp degree from Michigan State University. 
                 I am eager to learn, show off my skills, and enjoy the challenges ahead in the web developing world.
                 Please fill free to check out my projects along with how to be in contact with me. Thank you 
@@ -48,7 +48,7 @@
         <div class="main-section" id="projectDiv">
             <h2>Projects</h2>
             <p>
-                Here you will see my various project using: html, css, java script, node.js, bootstrap etc. 
+                Here you will see my various project using: react, html, css, java script, node.js, bootstrap etc. 
             </p>
             <div id="coffeeImageDiv">
                 <a target="blank" class="imageLink" href="https://hhhhhaaaa.github.io/WillWeather/">
@@ -115,7 +115,7 @@
         <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
       
-        <!-- Load our React component. -->
+        <!-- Load ßReact component. -->
         <script src="like_button.js"></script>
       
 </body>
